--- a/components/repositores-table.html
+++ b/components/repositores-table.html
@@ -36,6 +36,9 @@
                                     title="Nombre de Repositor">Nombre</th>
 
                                 <th scope="col" class="px-4 py-3.5 text-sm font-normal text-left text-gray-500"
+                                    title="Nombre de Repositor">Supervisor</th>
+
+                                <th scope="col" class="px-4 py-3.5 text-sm font-normal text-left text-gray-500"
                                     title="Número de Teléfono del Repositor">
                                     Teléfono
                                 </th>
@@ -63,7 +66,7 @@
                             <template x-if="$store.usuarios?.estado === 'CARGANDO'">
                                 <template x-for="i in 6" :key="i">
                                     <tr class="animate-pulse">
-                                        <template x-for="j in 6" :key="j">
+                                        <template x-for="j in 7" :key="j">
                                             <td class="px-4 py-3.5">
                                                 <p class="w-32 h-2 bg-gray-200 rounded-lg"></p>
                                             </td>
@@ -74,7 +77,7 @@
 
                             <template x-if="$store.usuarios?.estado === 'RENDER'">
                                 <template x-for="repositor in $store.usuarios?.repositores.filter(r => 
-                                    (`${r.User.last_name} ${r.User.name} ${r.User.identification_number} ${r.User.phone} ${r.User.primary_transport} ${r.User.alternative_transportation} ${r.User.city} ${r.User.state}`)
+                                    (`${r.User.last_name} ${r.User.name} ${r.Supervisor.last_name} ${r.Supervisor.name} ${r.User.identification_number} ${r.User.phone} ${r.User.primary_transport} ${r.User.alternative_transportation} ${r.User.city} ${r.User.state}`)
                                     .toLowerCase().includes(filtroRepositores.toLowerCase())
                                 )" :key="repositor.User.id">
                                     <tr>
@@ -92,13 +95,23 @@
                                             </div>
                                         </td>
 
+                                        <td class="px-4 py-3.5 text-sm font-medium whitespace-nowrap">
+                                            <div>
+                                                <h2 class="font-medium text-gray-800" x-text="repositor.Supervisor.last_name && repositor.Supervisor.name 
+                                    ? `${repositor.Supervisor.last_name}, ${repositor.Supervisor.name}`: repositor.Supervisor.last_name
+                                    ? repositor.Supervisor.last_name : repositor.Supervisor.name
+                                    ? repositor.Supervisor.name : '—'"></h2>
+                                            </div>
+                                        </td>
+
                                         <td class="px-4 py-3.5 text-sm whitespace-nowrap"
                                             x-text="repositor.User.phone || '—'">
                                         </td>
 
                                         <td class="px-4 py-3.5 text-sm whitespace-nowrap">
                                             <div>
-                                                <h4 class="text-gray-700" x-text="repositor.User.primary_transport || ''">
+                                                <h4 class="text-gray-700"
+                                                    x-text="repositor.User.primary_transport || ''">
                                                 </h4>
                                                 <p class="text-gray-500"
                                                     x-text="repositor.User.alternative_transportation || ''"></p>
